<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="app_name">Stop-o-Moto</string>
    <string name="action_picture">take picture</string>
    <string name="action_share">share with…</string>

    <string name="preference_loop_back_title">Loop back</string>
    <string name="preference_loop_back_summary">
      Play the pictures in order then play them backward. The last
      frame won't be duplicated.
    </string>

    <string name="preference_framerate_title">Low framerate</string>
    <string name="preference_framerate_summary">
      Generate the video at 8 frames per seconds instead of 13.
    </string>

    <string name="preference_high_title">High resolution</string>
    <string name="preference_high_summary">
      Use pictures at the largest available resolution.
    </string>

    <string name="action_info">info website</string>
    <string name="action_movie">Create movie!</string>

    <string name="action_preferences">Preferences</string>
    <string name="preference_mp4_main_title">Mp4</string>
    <string name="preference_mp4_main_summary">
      Create an H264 video using mp4 container.
    </string>
    <string name="preference_mp4_whatsapp_title">Whatsapp mp4</string>
    <string name="preference_mp4_whatsapp_summary">
      Create a Whatsapp-compatible video.
    </string>
    <string name="preference_gif_title">Gif</string>
    <string name="preference_gif_summary">
      Create a GIF.
    </string>

    <string name="fail">fail</string>
    <string name="mpg_fail">ffmpeg fail</string>
    <string name="ok">Ok: movie file stored in Documents/de.digisocken.stop-o-moto/\n\nYou can use the share button, now.</string>
    <string name="processing">processing…</string>
    <string name="picadd">picture added</string>
    <string name="no_support">Gif and Whatsapp compatible video will not work :-(</string>
    <string name="created_by">Created with Stop-o-Moto</string>
</resources>
