<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory android:title="Video format">
    <SwitchPreferenceCompat
        android:key="build_main_mp4"
        android:title="@string/preference_mp4_main_title"
        android:summary="@string/preference_mp4_main_summary"
        android:defaultValue="true"/>

    <SwitchPreferenceCompat
        android:key="build_whatsapp_mp4"
        android:title="@string/preference_mp4_whatsapp_title"
        android:summary="@string/preference_mp4_whatsapp_summary"
        android:defaultValue="false"/>

    <SwitchPreferenceCompat
        android:key="build_gif"
        android:title="@string/preference_gif_title"
        android:summary="@string/preference_gif_summary"
        android:defaultValue="false"/>

    <ListPreference
        android:key="resolution"
        android:title="@string/preference_resolution_title"
        android:summary="%s"
        android:entries="@array/preference_quality_entries"
        android:entryValues="@array/preference_quality_values"
        android:dialogTitle="@string/resolution_dialog_title"
        android:defaultValue="0"/>

    <SeekBarPreference
        android:key="framerate"
        android:title="@string/preference_framerate_title"
        android:summary="@string/preference_framerate_summary"
        app:min="1"
        android:max="25"
        android:defaultValue="15"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="Timeline">
    <SwitchPreferenceCompat
        android:key="timeline_loop_back"
        android:title="@string/preference_loop_back_title"
        android:summary="@string/preference_loop_back_summary"
        android:defaultValue="false"/>
  </PreferenceCategory>
</PreferenceScreen>
