<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.digisocken.stop_o_moto.ScrollingActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:icon="@mipmap/share"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_picture"
        android:orderInCategory="100"
        android:icon="@mipmap/camera"
        android:title="@string/action_picture"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:checked="false"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_movie"
        android:orderInCategory="100"
        android:title="@string/action_movie"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/action_preferences"
        app:showAsAction="never" />
</menu>
